# examples

./: .gitmodules  README.md  vcpkg-configuration.json
android-cpp/: README.md  settings.gradle
android-cpp/app/: build.gradle
android-cpp/app/src/androidTest/java/com/example/firebirdandroidcpp/: ExampleInstrumentedTest.kt
android-cpp/app/src/main/: AndroidManifest.xml
android-cpp/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android-cpp/app/src/main/cpp/include/firebird/: IdlFbInterfaces.h  Interface.h  Message.h
android-cpp/app/src/main/cpp/include/firebird/impl/: blr.h  inf_pub.h
android-cpp/app/src/main/cpp/include/firebird/impl/msg/: gfix.h  isql.h  jrd.h
android-cpp/app/src/main/java/com/example/firebirdandroidcpp/: MainActivity.kt
android-cpp/app/src/main/res/values/: strings.xml  themes.xml
android-cpp/app/src/main/res/values-night/: themes.xml
android-cpp/app/src/test/java/com/example/firebirdandroidcpp/: ExampleUnitTest.kt
android-cpp/gradle/wrapper/: gradle-wrapper.properties
cmake-vcpkg/: .clang-format  .editorconfig  CMakeLists.txt  README.md  vcpkg.json
cmake-vcpkg/scripts/: build-linux-make-debug.sh  build-linux-make-release.sh  build-linux-ninja-debug.sh  build-linux-ninja-release.sh  build-windows-vs2022-x64-debug.bat  build-windows-vs2022-x64-release.bat  gen-linux-make-debug.sh  gen-linux-make-release.sh  gen-linux-ninja.sh  gen-windows-vs2022-x64.bat  install-linux-make-debug.sh  install-linux-make-release.sh  install-linux-ninja-debug.sh  install-linux-ninja-release.sh  install-windows-vs2022-x64-debug.bat  install-windows-vs2022-x64-release.bat  setenv-windows-vs2022-x64-debug.bat  setenv-windows-vs2022-x64-release.bat
cmake-vcpkg/src/: main.cpp
